Added CSS sheep project files.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="intro">
           <div class="container">
             <h1>Projects</h1>
-            <p class="big">I like to design nice interfaces for the web. Here is a showcase of some projects that I've worked on.</p>
+            <p class="big">I like to design creative and usable interfaces for the web. Here is a showcase of some projects that I've worked on.</p>
           </div>
         </div>
         <div class="container">
@@ -61,18 +61,17 @@
                 </a>
               </div>
               <div class="col-6">
-                <a href="projects/matt-rose.html" class="outer-box">
-                  <img src="images/project-thumbs/matt-rose-thumb.png" onerror="this.src='images/project-thumbs/matt-rose-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Matthew's and Rosanna's Story."/>
+                <a href="projects/css-sheep.html" class="outer-box">
+                  <img src="images/project-thumbs/css-sheep-thumb.png" onerror="this.src='images/project-thumbs/css-sheep-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for CSS3 sheep animation."/>
                   <div class="caption">
-                    <p class="bigger">Matthew's and Rosanna's Story</p>
-                    <p>An illustrated story about my fianc&#233; and I.</p>
+                    <p class="bigger">CSS3 Animated Sheep</p>
+                    <p>An experiment with CSS3 animations.</p>
                     <ul class="inline-list">
-                      <li><span class="label">Web design</span></li>
-                      <li><span class="label">Graphic design</span></li>
+                      <li><span class="label">CSS3 Animation</span></li>
                     </ul>
                   </div>
                   <div class="overlay">
-                    <p><span class="sr-only">Find out more about Matthew and Rosanna's Story.</span></p>
+                    <p><span class="sr-only">Find out more about my CSS sheep.</span></p>
                   </div>
                 </a>
               </div>
@@ -95,6 +94,24 @@
                 </a>
               </div>
               <div class="col-6">
+                <a href="projects/matt-rose.html" class="outer-box">
+                  <img src="images/project-thumbs/matt-rose-thumb.png" onerror="this.src='images/project-thumbs/matt-rose-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Matthew's and Rosanna's Story."/>
+                  <div class="caption">
+                    <p class="bigger">Matthew's and Rosanna's Story</p>
+                    <p>An illustrated story about my fianc&#233; and I.</p>
+                    <ul class="inline-list">
+                      <li><span class="label">Web design</span></li>
+                      <li><span class="label">Graphic design</span></li>
+                    </ul>
+                  </div>
+                  <div class="overlay">
+                    <p><span class="sr-only">Find out more about Matthew and Rosanna's Story.</span></p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-6">
                 <a href="projects/restaurant88.html" class="outer-box">
                   <img src="images/project-thumbs/restaurant88-thumb.png" onerror="this.src='images/project-thumbs/restaurant88-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Restaurant 88's website."/>
                   <div class="caption">
@@ -110,8 +127,6 @@
                   </div>
                 </a>
               </div>
-            </div>
-            <div class="row">
               <div class="col-6">
                 <a href="projects/lca2015.html" class="outer-box">
                   <img src="images/project-thumbs/lca-2015-thumb.png" onerror="this.src='images/project-thumbs/lca-2015-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for the Linux Conference Auckland 2015 Website Mockup."/>
@@ -127,6 +142,8 @@
                   </div>
                 </a>
               </div>
+            </div>
+            <div class="row">
               <div class="col-6">
                 <a href="projects/vbc-blog.html" class="outer-box">
                   <img src="images/project-thumbs/vbc-blog-thumb.png" onerror="this.src='images/project-thumbs/vbc-blog-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for VBC's blog theme."/>
@@ -139,6 +156,21 @@
                   </div>
                   <div class="overlay">
                     <p><span class="sr-only">Find out more about VBC's Blog Theme.</span></p>
+                  </div>
+                </a>
+              </div>
+              <div class="col-6">
+                <a href="projects/vector-graphics-foo.html" class="outer-box">
+                  <img src="images/project-thumbs/vector-art-thumb.png" onerror="this.src='images/project-thumbs/vector-art-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Vector Graphics Foo."/>
+                  <div class="caption">
+                    <p class="bigger">Vector Graphics Foo</p>
+                    <p>A collection of some of my vector art.</p>
+                    <ul class="inline-list">
+                      <li><span class="label">Graphic design</span></li>
+                    </ul>
+                  </div>
+                  <div class="overlay">
+                    <p><span class="sr-only">Find out more about Vector Graphics Foo.</span></p>
                   </div>
                 </a>
               </div>
@@ -179,21 +211,6 @@
             </div>
             <div class="row">
               <div class="col-6">
-                <a href="projects/vector-graphics-foo.html" class="outer-box">
-                  <img src="images/project-thumbs/vector-art-thumb.png" onerror="this.src='images/project-thumbs/vector-art-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Vector Graphics Foo."/>
-                  <div class="caption">
-                    <p class="bigger">Vector Graphics Foo</p>
-                    <p>A collection of some of my vector art.</p>
-                    <ul class="inline-list">
-                      <li><span class="label">Graphic design</span></li>
-                    </ul>
-                  </div>
-                  <div class="overlay">
-                    <p><span class="sr-only">Find out more about Vector Graphics Foo.</span></p>
-                  </div>
-                </a>
-              </div>
-              <div class="col-6">
                 <a href="projects/argia.html" class="outer-box">
                   <img src="images/project-thumbs/argia-thumb.png" onerror="this.src='images/project-thumbs/argia-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Argia."/>
                   <div class="caption">
@@ -205,23 +222,6 @@
                   </div>
                   <div class="overlay">
                     <p><span class="sr-only">Find out more about Argia.</span></p>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-6">
-                <a href="projects/sketches.html" class="outer-box">
-                  <img src="images/project-thumbs/sketches-thumb.png" onerror="this.src='images/project-thumbs/sketches-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Sketches."/>
-                  <div class="caption">
-                    <p class="bigger">Sketches</p>
-                    <p>A collection of some of my favourite sketches.</p>
-                    <ul class="inline-list">
-                      <li><span class="label">Illustration</span></li>
-                    </ul>
-                  </div>
-                  <div class="overlay">
-                    <p><span class="sr-only">Find out more about Sketches.</span></p>
                   </div>
                 </a>
               </div>
@@ -241,6 +241,23 @@
                 </a>
               </div>
             </div>
+            <!--div class="row">
+              <div class="col-6">
+                <a href="projects/sketches.html" class="outer-box">
+                  <img src="images/project-thumbs/sketches-thumb.png" onerror="this.src='images/project-thumbs/sketches-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Sketches."/>
+                  <div class="caption">
+                    <p class="bigger">Sketches</p>
+                    <p>A collection of some of my favourite sketches.</p>
+                    <ul class="inline-list">
+                      <li><span class="label">Illustration</span></li>
+                    </ul>
+                  </div>
+                  <div class="overlay">
+                    <p><span class="sr-only">Find out more about Sketches.</span></p>
+                  </div>
+                </a>
+              </div>
+            </div-->
           </section>
           <!--End main content-->
         </div>
