--- a/projects/css-sheep.html
+++ b/projects/css-sheep.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Heat pump Controller - Projects - Rosanna Fong Portfolio</title>
-    <meta name="description" content="About the Heat pump Controller project.">
+    <title>CSS3 Animated Sheep - Projects - Rosanna Fong Portfolio</title>
+    <meta name="description" content="Rosanna Fong's Design Portfolio projects template.">
     <meta name="author" content="Rosanna Fong">
     <link rel="stylesheet" href="../css/font-awesome.min.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="../css/main.css" type="text/css" media="screen"/>
@@ -36,10 +36,9 @@
         <div class="intro">
           <div class="container">
             <!--Begin introduction-->
-            <h1>Heat pump Controller</h1>
-            <p class="big">The Heat pump Controller is a side project which is worked on in collaboration with others to build a wi-fi controller for home heat pumps.</p>
-            <p>While this product is not fully functional yet, I was involved in creating the brand assets and a <a href="http://rosannafong.github.io/heat-pump-controller/">pattern library <span class="sr-only">for the Heat pump Controller. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a> and user interface design. You can also see the source on <a href="https://github.com/rosannafong/heat-pump-controller">Github <span class="sr-only">. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a>.</p>
-            <p><a href="http://rosannafong.github.io/heat-pump-controller/demo-pages/demo-user-login.html" class="button">See demo <span class="sr-only">for the Heat pump Controller. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a></p>
+            <h1>CSS3 Animated Sheep</h1>
+            <p class="big">An experiment with CSS3 animations using basic shapes and keyframes.</p>
+            <p><a href="http://rosannafong.github.io/css-sheep/" class="button">See demo <span class="sr-only">for the CSS# animated sheep. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a></p>
             <!--End introduction-->
           </div>
         </div>
@@ -47,24 +46,8 @@
           <!--Begin main content-->
           <div class="row">
             <div class="col-12">
-              <p><img src="../images/heatpump-controller/heat-pump-controller-lg-view.png" onerror="this.src='../images/heatpump-controller/heat-pump-controller-lg-view.jpg'; this.onerror=null;" class="img-responsive" alt="Heat pump Controller web interface on a large viewport."/><br/>
-              <span class="label">Heat pump Controller web interface on a large viewport.</label></p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-8">
-              <p><img src="../images/heatpump-controller/heat-pump-controller-md-view.png" onerror="this.src='../images/heatpump-controller/heat-pump-controller-md-view.jpg'; this.onerror=null;" class="img-responsive" alt="Heat pump Controller web interface on a large viewport."/><br/>
-              <span class="label">Heat pump Controller web interface on a smaller viewport.</label></p>
-            </div>
-            <div class="col-4">
-              <p><img src="../images/heatpump-controller/heat-pump-controller-sm-view.png" onerror="this.src='../images/heatpump-controller/heat-pump-controller-sm-view.jpg'; this.onerror=null;" class="img-responsive" alt="Heat pump Controller web interface on an extra small viewport."/><br/>
-              <span class="label">Heat pump Controller web interface on an extra small viewport.</label></p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-12">
-              <p><img src="../images/heatpump-controller/colours.png" onerror="this.src='../images/heatpump-controller/colours.jpg'; this.onerror=null;" class="img-responsive bordered" alt="Heat pump Controller colour palette shown in the pattern library."/><br/>
-              <span class="label">Heat pump Controller colour palette shown in the <a href="http://rosannafong.github.io/heat-pump-controller/components/colours.html">pattern library <span class="sr-only">for the Heat pump Controller. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a>.</label></p>
+              <p><img src="../images/css-sheep/sheep.png" onerror="this.src='../images/css-sheep/sheep.jpg'; this.onerror=null;" class="img-responsive" alt="CSS3 animated sheep on a large viewport."/><br/>
+              <span class="label">CSS3 animated sheep on a large viewport.</label></p>
             </div>
           </div>
           <!--End main content-->
