Modified text on banding page.

--- a/projects/css-sheep.html
+++ b/projects/css-sheep.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>CSS3 Animated Sheep - Projects - Rosanna Fong Portfolio</title>
-    <meta name="description" content="Rosanna Fong's Design Portfolio projects template.">
+    <meta name="description" content="Experimenting with CSS3 animations.">
     <meta name="author" content="Rosanna Fong">
     <link rel="stylesheet" href="../css/font-awesome.min.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="../css/main.css" type="text/css" media="screen"/>
