--- a/projects/branding.html
+++ b/projects/branding.html
@@ -46,7 +46,7 @@
           <div class="row">
             <div class="col-8">
               <p><img src="../images/branding/rf-brand.svg" onerror="this.src='../images/branding/rf-brand.png'; this.onerror=null;" class="img-responsive" alt="Rosanna Fong brand logo."/><br/>
-              <span class="label">I've incorporated my initials with the lastest design of my brand identity.</span></p>
+              <span class="label">I've incorporated my initials with the latest design of my brand identity.</span></p>
             </div>
             <div class="col-4">
               <p><img src="../images/branding/old-brand.svg" onerror="this.src='../images/branding/old-brand.png'; this.onerror=null;" class="img-responsive" alt="Rosanna Fong old brand logo."/><br/>
