Updated footer content.

--- a/index.html
+++ b/index.html
@@ -241,23 +241,6 @@
                 </a>
               </div>
             </div>
-            <!--div class="row">
-              <div class="col-6">
-                <a href="projects/sketches.html" class="outer-box">
-                  <img src="images/project-thumbs/sketches-thumb.png" onerror="this.src='images/project-thumbs/sketches-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Sketches."/>
-                  <div class="caption">
-                    <p class="bigger">Sketches</p>
-                    <p>A collection of some of my favourite sketches.</p>
-                    <ul class="inline-list">
-                      <li><span class="label">Illustration</span></li>
-                    </ul>
-                  </div>
-                  <div class="overlay">
-                    <p><span class="sr-only">Find out more about Sketches.</span></p>
-                  </div>
-                </a>
-              </div>
-            </div-->
           </section>
           <!--End main content-->
         </div>
@@ -269,13 +252,13 @@
         <ul class="inline-list">
           <li><a href="mailto:contact@rosanna.co.nz"><span class="fa fa-envelope fa-3x"></span><span class="sr-only">Email: contact@rosanna.co.nz</span></a></li>
           <li><a href="http://nz.linkedin.com/pub/rosanna-fong/37/ab6/201"><span class="fa fa-linkedin-square fa-3x"></span><span class="sr-only">This link takes you to an external site. You will be taken to Rosanna's LinkedIn profile.</span></a></li>
-          <li><a href="https://github.com/rosannafong"><span class="fa fa-github-square fa-3x"></span><span class="sr-only">This link takes you to an external site. You will be taken to Rosanna's GitHub Gist.</span></a></li>
+          <li><a href="https://github.com/rosannafong"><span class="fa fa-github-square fa-3x"></span><span class="sr-only">This link takes you to an external site. You will be taken to Rosanna's GitHub profile.</span></a></li>
         </ul>
       </div>
     </div>
     <footer class="footer">
       <div class="container">
-        <p class="copyright-info">&copy; 2015 Rosanna Fong.</p>
+        <p class="copyright-info">&copy; 2016 Rosanna Fong.</p>
         <button type="button" class="button up-button">Back to top</button>
       </div>
     </footer>
