--- a/template.html
+++ b/template.html
@@ -61,13 +61,13 @@
         <ul class="inline-list">
           <li><a href="mailto:contact@rosanna.co.nz"><span class="fa fa-envelope fa-3x"></span><span class="sr-only">Email: contact@rosanna.co.nz</span></a></li>
           <li><a href="http://nz.linkedin.com/pub/rosanna-fong/37/ab6/201"><span class="fa fa-linkedin-square fa-3x"></span><span class="sr-only">This link takes you to an external site. You will be taken to Rosanna's LinkedIn profile.</span></a></li>
-          <li><a href="https://github.com/rosannafong"><span class="fa fa-github-square fa-3x"></span><span class="sr-only">This link takes you to an external site. You will be taken to Rosanna's GitHub Gist.</span></a></li>
+          <li><a href="https://github.com/rosannafong"><span class="fa fa-github-square fa-3x"></span><span class="sr-only">This link takes you to an external site. You will be taken to Rosanna's GitHub profile.</span></a></li>
         </ul>
       </div>
     </div>
     <footer class="footer">
       <div class="container">
-        <p class="copyright-info">&copy; 2015 Rosanna Fong.</p>
+        <p class="copyright-info">&copy; 2016 Rosanna Fong.</p>
         <button type="button" class="button up-button">Back to top</button>
       </div>
     </footer>
